@startuml Class Diagram

!theme plain
skinparam classAttributeIconSize 0

class Profile {
  + String id
  + String fullName
  + String email
  + String? avatarUrl
  + String? phone
  + String? address
  --
  + updateProfile()
}

class Plant {
  + String id
  + String name
  + String? scientificName
  + String category
  + String? description
  + Map careInstructions
  + String? imageUrl
}

class UserPlant {
  + String id
  + String userId
  + String? plantId
  + String name
  + String healthStatus
  + int growthPercentage
  + DateTime? nextWateringDate
  + String? notes
  --
  + updateHealth()
  + updateWateringDate()
}

class PlantHealthHistory {
  + String id
  + String userPlantId
  + String healthStatus
  + int? growthPercentage
  + String? notes
  + DateTime recordedAt
}

class Reminder {
  + String id
  + String userId
  + String? userPlantId
  + String title
  + String reminderType
  + TimeOfDay scheduledTime
  + String repeatFrequency
  + bool isActive
  --
  + schedule()
  + cancel()
}

class Product {
  + String id
  + String name
  + String? description
  + double price
  + String category
  + String? imageUrl
  + bool inStock
  + int stockQuantity
}

class Order {
  + String id
  + String userId
  + String orderNumber
  + double totalAmount
  + Map shippingAddress
  + String status
  + bool isGift
  --
  + calculateTotal()
  + cancel()
}

class OrderItem {
  + String id
  + String orderId
  + String? productId
  + String productName
  + double productPrice
  + int quantity
  + double subtotal
}

class Gift {
  + String id
  + String orderId
  + String senderId
  + String receiverName
  + String receiverEmail
  + Map receiverAddress
  + String? giftMessage
}

' Relationships
Profile "1" --> "*" UserPlant
Profile "1" --> "*" Reminder
Profile "1" --> "*" Order
Profile "1" --> "*" Gift

Plant "1" --> "*" UserPlant

UserPlant "1" --> "*" PlantHealthHistory
UserPlant "0..*" --> "*" Reminder

Order "1" --> "*" OrderItem
Order "1" --> "0..1" Gift

Product "1" --> "*" OrderItem

@enduml

